@@ -1,3 +1,8 @@
+2010-01-19  Dodji Seketeli  <dodji@redhat.com>
+
+	* g++.dg/template/error45.C: reverted as part of reverting the
+	fix of PR c++/42634.
+
 2010-01-18  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/42634
